--- a/renderer/main.html
+++ b/renderer/main.html
@@ -1386,6 +1386,7 @@
             sendId: event.data.send_id,
             position: event.data.position,
             _type: 1, // 百度系
+            current_cookie: event.data.current_cookies
           });
           
         }
