修改保存和渲染问题

--- a/renderer/hub.html
+++ b/renderer/hub.html
@@ -605,9 +605,12 @@
                   const accIdExistsOnServer = hasBoundAccId ? allServerAccIds.has(account.serverData.acc_id) : false;
                   
                   // 只有从未绑定过的账号，或者已绑定且acc_id存在的账号，才允许匹配
-                  // 一旦曾经绑定过又解绑的账号（hasEverBound为true且没有serverData），永远不再匹配其他账号
+                  // 允许以下情况的账号匹配：
+                  // 1. 从未绑定过的账号（hasEverBound为false且没有绑定的acc_id）
+                  // 2. 已绑定的账号（hasBoundAccId为true）
+                  // 3. 已解绑的账号（hasEverBound为true但没有serverData）- 允许重新匹配新的授权数据
                   console.log("%chasBoundAccId:",'color:red;',hasBoundAccId)
-                  if ((!account.hasEverBound && !hasBoundAccId) || (hasBoundAccId)) {
+                  if ((!account.hasEverBound && !hasBoundAccId) || (hasBoundAccId) || (account.hasEverBound && !account.serverData)) {
                     // 主账号位置（position=1）只能匹配服务器返回的is_main=1或true的账号
                     console.log('%c其他位置按position匹配服务器账号', 'color:blue;', localPosition,currentMenuId)
                     if (localPosition === 1 && currentMenuId === 1) {
