头条号上线

--- a/renderer/main.html
+++ b/renderer/main.html
@@ -709,7 +709,7 @@
           url: "https://mp.toutiao.com/auth/page/login",
           icon: "📰",
           flag: false,
-          show: false,
+          show: true,
         },
         {
           id: 5,
@@ -803,7 +803,7 @@
         }
 
         navItems.forEach((item, index) => {
-          if (item.id != 5 && item.id != 3 && item.show) {
+          if (item.id != 5 && item.show) {
             const navItem = document.createElement("div");
             navItem.className = "nav-item";
             if (item.id === currentNavId) navItem.classList.add("active");
